[package]
name = "cplit"
version = "0.3.4"
authors = ["Leachim"]
keywords = ["competitive"]
description = "Competitive Programming Library in Rust"
license = "MIT"
repository = "https://github.com/Licheam/cplit"
edition = "2021"

build = "build.rs"

[build-dependencies]
rust-bundler = { git = "https://github.com/Licheam/rust-bundler.git" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

