[package]
name = "cplit"
version = "0.4.2"
authors = ["Leachim"]
keywords = ["competitive"]
description = "Competitive Programming Library in Rust"
license = "MIT"
repository = "https://github.com/Licheam/cplit"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

